bkp/OLD_BKP/social-echo-fixed.yaml
# ==================================================
# MONGO DB
# ==================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: db_ng-20260412102339230300000035
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: socialecho
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
# ==================================================
# MONGO EXPRESS
# ==================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: db_ng-20260412102339230300000035
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: socialecho
spec:
  type: NodePort
  selector:
    app: mongo-express
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32081
---
# ==================================================
# BACKEND STABLE
# ==================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: socialecho
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: backend_ng-20260412102339230000000033
      containers:
      - name: backend
        image: mukheshdn/backend:02
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: socialecho
spec:
  selector:
    app: backend
    version: v1
  ports:
    - port: 4000
      targetPort: 4000
---
# ==================================================
# BACKEND CANARY
# ==================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-canary
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: backend_canary_ng-2026041210233922810000002d
      containers:
      - name: backend
        image: kvikash668/backend:15
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: socialecho
spec:
  selector:
    app: backend
    version: v2
  ports:
    - port: 4000
      targetPort: 4000
---
# ==================================================
# FRONTEND STABLE
# ==================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-stable
  namespace: socialecho
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: frontend_ng-20260412102339229900000031
      containers:
      - name: frontend
        image: mukheshdn/frontend:02
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: socialecho
spec:
  selector:
    app: frontend
    version: v1
  ports:
    - port: 80
      targetPort: 80
---
# ==================================================
# FRONTEND CANARY
# ==================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: frontend_canary_ng-2026041210233922850000002f
      containers:
      - name: frontend
        image: kvikash668/frontend:15
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: socialecho
spec:
  selector:
    app: frontend
    version: v2
  ports:
    - port: 80
      targetPort: 80
